# innowise_laboratory

lecture_1/my_project/: main.py  pyproject.toml
lecture_2/mini-profile/: main.py  pyproject.toml
lecture_3/grade_analyzer/: main.py  pyproject.toml
