[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleh Pipenko",email = "pguruop@gmail.com"}
]
#readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
